# flow-control

./: .gitignore  CLAUDE.md  fix_perms.sh  lefthook.yml  pyproject.toml  test.py
.claude/: .gitignore
.claude/commands/: run-exp.md
config/accelerate/: fsdp-4gpu.yml
docs/: CLAUDE.md  flux2-blog.md  fsdp2-dcp.md  models-and-reports.md  modules.md  output-layout.md  repo-layout.md
examples/: pipeline.py  serve.jsonc  serve_flux2.jsonc  t2i.csv  t2i_en.csv  tie.csv  tie_en.csv  vae_server.jsonc  vae_server.toml
examples/awm/geneval_sd35/: train.awm.jsonc
examples/awm/ocr_flux/: train.awm.jsonc
examples/awm/ocr_sd35/: train.awm.jsonc
examples/awm/pickscore_flux/: train.awm.jsonc
examples/awm/pickscore_sd35/: train.awm.jsonc
examples/fsdp/: dcp.py  ema.py  multi_optim.py
examples/grpo/flux/: debug.grpo.jsonc  preprocess.jsonc  preprocess.toml  preprocess_validation.toml  train.grpo.jsonc  train.toml  train_debug.toml  validation.preprocess.jsonc
examples/grpo/geneval_flux/: debug.grpo.jsonc  preprocess.jsonc  train.grpo.jsonc  validation.preprocess.jsonc
examples/grpo/geneval_sd35/: preprocess.jsonc  train.grpo.jsonc  train.grpo.nocfg.jsonc  validation.preprocess.jsonc
examples/grpo/ocr_flux/: debug.grpo.jsonc  preprocess.jsonc  train.grpo.jsonc  validation.preprocess.jsonc
examples/grpo/ocr_sd35/: preprocess.jsonc  train.grpo.jsonc  train.grpo.nocfg.jsonc  validation.preprocess.jsonc
examples/grpo/pickscore_flux/: debug.grpo.jsonc  preprocess.jsonc  train.grpo.jsonc  validation.preprocess.jsonc
examples/grpo/pickscore_sd35/: preprocess.jsonc  train.grpo.jsonc  train.grpo.nocfg.jsonc  validation.preprocess.jsonc
examples/inference/: inference_flux_t2i.toml  inference_longcat_t2i.toml  inference_qwen_t2i.toml  inference_zimage_t2i.toml  inference_zimage_turbo_t2i.toml  preprocess_flux2_t2i.toml  preprocess_flux_t2i.toml  preprocess_longcat_t2i.toml  preprocess_qwen_t2i.toml
examples/nft/geneval_sd35/: train.nft.jsonc
examples/nft/ocr_sd35/: train.nft.jsonc
examples/nft/pickscore_flux/: debug.nft.jsonc  preprocess.512.jsonc  preprocess.jsonc  train.nft.jsonc  validation.preprocess.jsonc
examples/nft/pickscore_sd35/: train.nft.jsonc
examples/nft/rational_rewards_flux/: debug.nft.jsonc  train.nft.jsonc  validation.preprocess.512.jsonc
examples/plugins/: README.md  toy.py
examples/ram/geneval_sd35/: train.ram.jsonc
examples/ram/ocr_sd35/: train.ram.jsonc
examples/ram/pickscore_flux/: train.ram.jsonc
examples/ram/pickscore_sd35/: train.ram.jsonc
examples/sft/flux_t2i/: preprocess.jsonc  preprocess.toml  preprocess_validation.toml  train.sft.jsonc  train.sft.preempt-test.jsonc  train.toml  validation.csv  validation.preprocess.jsonc
examples/slurm/: hf_download.sbatch  ms_download.sbatch  preprocess.sbatch  train.sbatch
examples/t2i/flux1/: inference.jsonc  inference.toml  preprocess.jsonc  preprocess.toml
examples/t2i/flux2/: inference.jsonc  inference.toml  inference_klein_4b.toml  inference_klein_9b.toml  inference_klein_base_4b.toml  inference_klein_base_9b.toml  klein_4b.inference.jsonc  klein_4b.preprocess.jsonc  klein_9b.inference.jsonc  klein_9b.preprocess.jsonc  klein_base_4b.inference.jsonc  klein_base_9b.inference.jsonc  preprocess.jsonc  preprocess.toml  preprocess_klein_4b.toml  preprocess_klein_9b.toml
examples/t2i/longcat/: inference.jsonc  inference.toml  preprocess.jsonc  preprocess.toml
examples/t2i/qwen/: inference.jsonc  inference.toml  preprocess.jsonc  preprocess.toml
examples/t2i/sd35/: inference.jsonc  preprocess.jsonc
examples/t2i/zimage/: inference.jsonc  inference.toml  inference_turbo.toml  preprocess.jsonc  preprocess.toml  turbo.inference.jsonc
examples/tie/flux1/: inference.jsonc  inference.toml  preprocess.jsonc  preprocess.toml
examples/vae/: debug.vae.jsonc  train.vae.jsonc
flow_control/: README.md  config.py
flow_control/adapters/: __init__.py  base.py  peft_lora.py
flow_control/contrib/: __init__.py  efficient_layered.py
flow_control/datasets/: __init__.py  bins_directory.py  bucket_directory.py  civitai.py  coercion.py  csv.py  directory.py  inline.py  jsonl.py  lines.py  lmdb.py  parquet.py  pickle_directory.py  plain_directory.py  prism_layers_pro.py  raw_directory.py  registry.py
flow_control/processors/: __init__.py  base.py  efficient_layered.py  flux1.py  kontext.py  presets.py  qwen.py  qwen_edit.py  qwen_layered.py
flow_control/rewards/: __init__.py  aesthetic.py  base.py  clip_image_similarity.py  clip_score.py  composite.py  geneval.py  hpsv2.py  image_reward.py  normalize.py  ocr.py  pairwise.py  pickscore.py  rational_rewards.py  unified_reward.py
flow_control/samplers/: __init__.py  base.py  euler.py  momentum.py  sampler.py  shift.py  simple_euler.py  solver.py
flow_control/scripts/: CLAUDE.md  cli.py  describe.py  export.py  finetune.py  generate_dcp_seed.py  launch.py  preprocess.py  preprocess_ray.py  report.py  reward_server.py  run_paths.py  schema.py  seed.py  serve.py  vae_server.py
flow_control/serving/: README.md  __init__.py  config.py  engine.py  gradio_app.py
flow_control/training/: README.md  __init__.py  accelerate_ddp.py  advantage.py  awm.py  data.py  ema.py  finetuner.py  grpo.py  hsdp.py  hsdp_engine.py  inference.py  launch_config.py  nft.py  ram.py  sft.py  trainer_base.py  weighting.py
flow_control/utils/: coercion.py  common.py  config.py  data.py  describe.py  device.py  draw.py  ema.py  hf_model.py  llm.py  loaders.py  logging.py  lora.py  merge_images.py  pipeline.py  pipeline_demo.py  progress.py  registry.py  remote.py  resize.py  tensor.py  types.py  upcasting.py  vae.py  weighting.py
frontend/: README.md  custom-media.css  custom-media.js  index.html
frontend/assets/: index-BcnSteuj.css  index-lHoXQDkP.js
frontend/custom-media/: base.css  caption.css  caption.js  controls.css  gallery.css  gallery.js  image-loader.js  main.js  media-data.js  state.js  trackio-dom.js  utils.js  viewer.css  viewer.js
notebooks/: dataset_bins.ipynb  generics.ipynb  prism_layers_pro.ipynb
schema/: CLAUDE.md
(+101 files in other folders)
