[project]
name = "flow-control"
version = "0.1.0"
description = "Training utilities for flow-matching Diffusion Transformers (DiTs)"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.12.0",
    "aim>=3.29.1",
    "bitsandbytes>=0.48.2 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "datasets>=4.4.1",
    "diffusers>=0.37.0",
    "einops>=0.8.1",
    "httpx>=0.28.1",
    "json5>=0.12.1",
    "kornia>=0.8.2",
    "kornia-rs>=0.1.10",
    "lmdb>=1.7.5",
    "peft>=0.18.0",
    "prodigyopt>=1.1.2",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "scipy>=1.17.0",
    "sentencepiece>=0.2.1",
    "starlette>=0.50.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchdata>=0.11.0",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "lefthook>=2.0.9",
    "pyright>=1.1.407",
    "ruff>=0.14.8",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "ipython>=9.7.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[project.scripts]
flow-control = "flow_control.scripts.cli:main"
describe = "flow_control.scripts.describe:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# NCCL 2.28.3 provides fix for https://github.com/pytorch/pytorch/issues/162057
override-dependencies = [
  "nvidia-nccl-cu12>=2.28.3; sys_platform == 'linux' or sys_platform == 'win32'",
]

[tool.uv.build-backend]
module-name = "flow_control"
module-root = ""

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
xformers = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # isort
    "I",
    # mccabe
    "C90",
]
ignore = [
    "E501",  # line too long
    "B027",  # empty function in abstract class
]
exclude = [
    "examples/**",
    "flow_control/third_party/**",
    "notebooks/**",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
typeCheckingMode = "standard"
# HuggingFace officially uses private imports a lot, so we disable the check here.
reportPrivateImportUsage = false
# Python lacks proper support for generic types and type infer. We do incompatible 
# method override to provide better type hints within subclasses.
reportIncompatibleMethodOverride = false
