[project]
name = "flow-control"
version = "0.1.0"
description = "Training utilities for flow-matching Diffusion Transformers (DiTs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "datasets>=4.4.1",
    "diffusers>=0.38.0",
    "einops>=0.8.1",
    "gradio>=6.10.0",
    "httpx>=0.28.1",
    "json5>=0.12.1",
    "jsonpath-ng>=1.8.0",
    "lmdb>=1.7.5",
    "open-clip-torch>=3.3.0",
    "peft>=0.18.0",
    "prodigyopt>=1.1.2",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "sentencepiece>=0.2.1",
    "starlette>=0.50.0",
    "timm>=1.0.22",
    "torch>=2.11.0", # 2.11 is the first release pinning nccl>=2.28.9 (pytorch#162057 fix); <=2.10 pin the buggy 2.27.5
    "torchdata>=0.11.0",
    "torchvision>=0.26.0", # paired with torch>=2.11.0
    "trackio>=0.26.0",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "lefthook>=2.0.9",
    "pyright>=1.1.407",
    "ruff>=0.14.8",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "ipython>=9.7.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "py-spy>=0.4.1",
    "scipy>=1.17.1",
]

[project.scripts]
flow-control = "flow_control.scripts.cli:main"
describe = "flow_control.scripts.describe:main"

[project.optional-dependencies]
ocr = [
    "onnxruntime-gpu>=1.20.0",
    "rapidocr>=3.4.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
# diffusers 0.38.0 bumped its safetensors floor to >=0.8.0-rc.0 in a metadata-only
# commit (huggingface/diffusers#13470, no code change), so pin back to the stable
# 0.7.x line and avoid pulling a pre-release. Drop once safetensors 0.8.0 is final.
override-dependencies = [
  "safetensors>=0.7.0",
]

[tool.uv.build-backend]
module-name = "flow_control"
module-root = ""

[tool.uv.sources]
torch = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
xformers = [
  { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-print
    "T20",
    # isort
    "I",
    # mccabe
    "C90",
]
ignore = [
    "E501",  # line too long
    "E741",  # ambiguous variable name
    "B027",  # empty function in abstract class
]
exclude = [
    "examples/**",
    "flow_control/third_party/**",
    "notebooks/**",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
typeCheckingMode = "standard"
# HuggingFace officially uses private imports a lot, so we disable the check here.
reportPrivateImportUsage = "none"
# Pydantic discriminated unions require Literal overrides of `type` fields in subclasses.
reportIncompatibleVariableOverride = "none"
reportUnnecessaryTypeIgnoreComment = "error"
ignore = [
  ".venv/**",
  "**/sites-packages/**",
  "flow_control/third_party/**",
  "notebooks/**",
]
